fix overflow

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -113,6 +113,7 @@ nav.main {
         }
         .site-nav {
             .clear;
+            overflow: hidden;
             float: right;
             line-height: @_lin_height;
             height: @_height;
